<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/details_iv_menu_banner"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="matrix"
                app:layout_collapseMode="parallax" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/details_iv_favorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingTop="8dp"
                android:src="@drawable/ic_favorite"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/details_iv_menu_check"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/Green" />

            <TextView
                android:id="@+id/details_tv_menu_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_value"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/details_iv_favorite"
                app:layout_constraintRight_toRightOf="@+id/details_iv_favorite"
                app:layout_constraintTop_toBottomOf="@id/details_iv_favorite" />

            <ImageView
                android:id="@+id/details_iv_menu_check"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingTop="8dp"
                android:src="@drawable/ic_check_circle"
                app:layout_constraintLeft_toRightOf="@id/details_iv_favorite"
                app:layout_constraintRight_toLeftOf="@id/details_iv_menu_calendar"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/Green" />

            <TextView
                android:id="@+id/details_iv_menu_votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_value"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/details_iv_menu_check"
                app:layout_constraintRight_toRightOf="@+id/details_iv_menu_check"
                app:layout_constraintTop_toBottomOf="@id/details_iv_menu_check" />

            <ImageView
                android:id="@+id/details_iv_menu_calendar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingTop="8dp"
                android:src="@drawable/ic_calendar"
                app:layout_constraintLeft_toRightOf="@id/details_iv_menu_votes"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/Green" />

            <TextView
                android:id="@+id/details_tv_menu_realiseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_value"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/details_iv_menu_calendar"
                app:layout_constraintRight_toRightOf="@+id/details_iv_menu_calendar"
                app:layout_constraintTop_toBottomOf="@id/details_iv_menu_calendar" />


            <TextView
                android:id="@+id/details_lbl_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/overview"
                android:textColor="@color/Black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_tv_menu_realiseDate" />

            <View
                android:id="@+id/details_view_lineOne"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/Black"
                app:layout_constraintBottom_toBottomOf="@id/details_lbl_overview"
                app:layout_constraintLeft_toRightOf="@id/details_lbl_overview"
                app:layout_constraintTop_toTopOf="@id/details_lbl_overview" />


            <TextView
                android:id="@+id/details_tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:textColor="@color/Black"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_lbl_overview" />

            <TextView
                android:id="@+id/details_lbl_originalLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingBottom="16dp"
                android:text="@string/original_language"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_tv_overview" />

            <TextView
                android:id="@+id/details_tv_originalLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/no_value"
                android:textAllCaps="true"
                android:textColor="@color/Black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/details_lbl_originalLanguage"
                app:layout_constraintLeft_toRightOf="@id/details_lbl_originalLanguage" />

            <TextView
                android:id="@+id/details_lbl_originalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingBottom="16dp"
                android:text="@string/original_title"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_tv_originalLanguage" />

            <TextView
                android:id="@+id/details_tv_originalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/no_value"
                android:textColor="@color/Black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/details_lbl_originalTitle"
                app:layout_constraintLeft_toRightOf="@id/details_lbl_originalTitle" />

            <TextView
                android:id="@+id/details_lbl_realiseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingBottom="16dp"
                android:text="@string/realise_date"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_tv_originalTitle" />

            <TextView
                android:id="@+id/details_tv_realiseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingBottom="16dp"
                android:text="@string/no_value"
                android:textColor="@color/Black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/details_lbl_realiseDate"
                app:layout_constraintLeft_toRightOf="@id/details_lbl_realiseDate"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/details_lbl_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingBottom="16dp"
                android:text="@string/title"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_tv_realiseDate"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/details_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/no_value"
                android:textColor="@color/Black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/details_lbl_title"
                app:layout_constraintLeft_toRightOf="@id/details_lbl_title" />

            <TextView
                android:id="@+id/details_lbl_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingBottom="16dp"
                android:text="@string/popularity"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_tv_title" />

            <TextView
                android:id="@+id/details_tv_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/no_value"
                android:textColor="@color/Black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/details_lbl_popularity"
                app:layout_constraintLeft_toRightOf="@id/details_lbl_popularity" />

            <TextView
                android:id="@+id/details_lbl_averageVote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingBottom="16dp"
                android:text="@string/average_votes"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_tv_popularity" />

            <TextView
                android:id="@+id/details_tv_averageVote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/no_value"
                android:textColor="@color/Black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/details_lbl_averageVote"
                app:layout_constraintLeft_toRightOf="@id/details_lbl_averageVote" />

            <TextView
                android:id="@+id/details_lbl_voteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingBottom="16dp"
                android:text="@string/votes_count"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_tv_averageVote" />

            <TextView
                android:id="@+id/details_tv_votesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/no_value"
                android:textColor="@color/Black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/details_lbl_voteCount"
                app:layout_constraintLeft_toRightOf="@id/details_lbl_voteCount" />

            <ImageView
                android:id="@+id/details_iv_bannerBG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.2"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
